--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <!DOCYYPE html>
 <html lang="en">
     <head>
-        <title>Hello!</title>
+        <title>Hello World!</title>
         <style>
             h1 {
                 color: blue;
