--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello World!</title>
         <style>
             h1 {
-                color: blue;
+                color: red;
             }
         </style>
     </head>
