--- a/hello.html
+++ b/hello.html
@@ -10,7 +10,7 @@
     </head>
 <body>
     <h1>Welcome to my Website!</h1>
-    <h2>Hello</h2>
+    <h2>Hello World</h2>
     Hello World!
 </body>
 </html>
